--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ branches:
   only:
     - master
     - development
+cache:
+  directories:
+    - node_modules
+  yarn: true
 script:
   - yarn lint
   - yarn test
