--- a/ecosystem.config.json
+++ b/ecosystem.config.json
@@ -1,8 +1,8 @@
 {
   "apps": [
     {
-      "name": "app",
-      "script": "src/index.js",
+      "name": "home-automation-api",
+      "script": "./dist/index.js",
       "instances": 1,
       "autorestart": true,
       "watch": false,
