--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "home-automation-api",
   "version": "1.0",
   "description": "Home Automation API",
-  "main": "src/index.js",
+  "main": "./dist/index.js",
   "repository": "",
   "author": "Vicky Gonsalves <vicky.gonsalves@outlook.com>",
   "license": "MIT",
@@ -10,8 +10,9 @@
     "node": ">=12.15.0"
   },
   "scripts": {
-    "start": "pm2 start ecosystem.config.json --no-daemon",
-    "dev": "cross-env NODE_ENV=development nodemon src/index.js",
+    "build": "babel src -d dist",
+    "start": "babel src -d dist && pm2 start ecosystem.config.json --no-daemon",
+    "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js",
     "test": "jest -i",
     "test:watch": "jest -i --watchAll",
     "coverage": "jest -i --coverage",
@@ -26,6 +27,8 @@
   },
   "keywords": [],
   "dependencies": {
+    "@babel/node": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
     "@hapi/joi": "^16.1.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
@@ -51,11 +54,17 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.1.0",
     "coveralls": "^3.0.7",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.4.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.0.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-security": "^1.4.0",
