--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pm2": "^4.1.2",
+    "socket.io": "^2.3.0",
+    "socketio-jwt-auth": "^0.1.0",
     "validator": "^12.0.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
