--- a/.babelrc.json
+++ b/.babelrc.json
@@ -9,5 +9,5 @@
       }
     ]
   ],
-  "plugins": [["@babel/transform-runtime"]]
+  "plugins": [["@babel/transform-runtime"], ["@babel/plugin-proposal-class-properties"]]
 }
