--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
     "socketio-jwt-auth": "^0.1.0",
+    "uniqid": "^5.2.0",
     "validator": "^12.0.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
