--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "babel src -d dist",
     "start": "babel src -d dist && pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js",
-    "test": "jest -i --forceExit",
+    "test": "jest -i",
     "test:watch": "jest -i --watchAll",
-    "coverage": "jest -i --forceExit --coverage",
+    "coverage": "jest -i --coverage",
     "coverage:coveralls": "jest -i --forceExit --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
