--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "home-automation-api",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Home Automation API",
   "main": "./dist/index.js",
-  "repository": "",
+  "repository": "https://github.com/vicky-gonsalves/home-automation-api",
   "author": "Vicky Gonsalves <vicky.gonsalves@outlook.com>",
   "license": "MIT",
   "engines": {
@@ -13,9 +13,9 @@
     "build": "babel src -d dist",
     "start": "babel src -d dist && pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js",
-    "test": "jest -i",
+    "test": "jest -i --forceExit",
     "test:watch": "jest -i --watchAll",
-    "coverage": "jest -i --coverage",
+    "coverage": "jest -coverage",
     "coverage:coveralls": "jest -i --forceExit --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -27,60 +27,60 @@
   },
   "keywords": [],
   "dependencies": {
-    "@babel/node": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@hapi/joi": "^16.1.7",
+    "@babel/node": "^7.8.7",
+    "@babel/runtime": "^7.8.7",
+    "@hapi/joi": "^17.1.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "cross-env": "^6.0.3",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^5.0.0",
-    "helmet": "^3.21.2",
-    "http-status": "^1.4.0",
+    "express-rate-limit": "^5.1.1",
+    "helmet": "^3.21.3",
+    "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "mongoose": "^5.7.7",
+    "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
-    "nodemailer": "^6.3.1",
-    "passport": "^0.4.0",
+    "nodemailer": "^6.4.4",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "pm2": "^4.1.2",
+    "pm2": "^4.2.3",
     "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
     "socketio-jwt-auth": "^0.1.0",
     "uniqid": "^5.2.0",
-    "validator": "^12.0.0",
+    "validator": "^12.2.0",
     "winston": "^3.2.1",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-env": "^7.8.7",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
-    "coveralls": "^3.0.7",
+    "coveralls": "^3.0.9",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.0.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-security": "^1.4.0",
     "faker": "^4.1.0",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.4.2",
+    "husky": "^4.2.3",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.0.8",
     "mockgoose": "^8.0.4",
-    "node-mocks-http": "^1.8.0",
-    "nodemon": "^2.0.0",
-    "prettier": "^1.18.2",
+    "node-mocks-http": "^1.8.1",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "socket.io-mock": "^1.2.4",
     "supertest": "^4.0.2"
   }
