--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "cross-env NODE_ENV=development nodemon --exec babel-node ./src/index.js",
     "test": "jest -i --forceExit",
     "test:watch": "jest -i --watchAll",
-    "coverage": "jest -coverage",
+    "coverage": "jest -i --coverage",
     "coverage:coveralls": "jest -i --forceExit --coverage --coverageReporters=text-lcov | coveralls",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -77,7 +77,7 @@
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
-    "mockgoose": "^8.0.4",
+    "mongodb-memory-server": "^6.3.2",
     "node-mocks-http": "^1.8.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
