--- a/package.json
+++ b/package.json
@@ -45,11 +45,12 @@
     "moment": "^2.24.0",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
-    "nodemailer": "^6.4.4",
+    "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pm2": "^4.2.3",
     "rxjs": "^6.5.4",
+    "secure-random-password": "^0.2.1",
     "socket.io": "^2.3.0",
     "socketio-jwt-auth": "^0.1.0",
     "uniqid": "^5.2.0",
